# workflows-and-automations

./: .editorconfig  .env.example  .eslintrc.js  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  CONTRIBUTING.md  README.md  Unified Engineering & App Developme.md  Untitled-1.ini  auto-push.ps1  package.json  render.yaml  requirements.txt
.cursor/: mcp.json
.github/: CODEOWNERS
03_App-Development-Framework/: README-TECHSTACK.md  README.md
Engineering-Projects/: README.md  Unified Engineering & App Developme.md
JonnyJr/: # clone and enter your repo.txt  .gitignore  (+3 more)
trading-intelligence-agent/: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
trading-intelligence-agent/apps/api_service/: main.py
trading-intelligence-agent/apps/api_service/routes/: admin.py  assets.py  backtest.py  market.py  news.py  portfolio.py  research.py  risk.py  signals.py
trading-intelligence-agent/apps/api_service/static/: app.js  index.html  styles.css
trading-intelligence-agent/apps/collector_service/: main.py
trading-intelligence-agent/apps/scheduler_service/: main.py
trading-intelligence-agent/apps/worker_service/: main.py
trading-intelligence-agent/config/: crypto_rss_feeds.yaml  firestore.indexes.json  firestore.rules  signal_weights.yaml
trading-intelligence-agent/docs/: architecture.md  data-sources.md  deployment.md  risk-methodology.md  roadmap.md  runbooks.md  signal-methodology.md
trading-intelligence-agent/infra/docker/: Dockerfile.api  Dockerfile.base  Dockerfile.collector  Dockerfile.scheduler  Dockerfile.worker
trading-intelligence-agent/infra/migrations/: env.py
trading-intelligence-agent/infra/migrations/versions/: 001_initial_schema.py  002_portfolio_policy_foundation.py
trading-intelligence-agent/scripts/: seed_demo_data.py
trading-intelligence-agent/tests/: conftest.py
trading-intelligence-agent/tests/fixtures/: market_data.json  news_data.json  social_data.json
trading-intelligence-agent/tests/integration/: test_api_health.py
trading-intelligence-agent/tests/replay/: test_no_lookahead.py
trading-intelligence-agent/tests/unit/: test_alpha_vantage_provider.py  test_coinbase_exchange_provider.py  test_corporate_intel_collector.py  test_crypto_feeds_catalog.py  test_database_url.py  test_deduplication.py  test_finnhub_and_sec_api_providers.py  test_fred_provider.py  test_iposcoop_calendar_provider.py  test_polygon_provider.py  test_portfolio_policy.py  test_provider_factory.py  test_risk_flags.py  test_signal_scoring.py  test_ticker_extraction.py
(+131 files in other folders)
