[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-intelligence-agent"
version = "0.1.0"
description = "AI-powered trading research and decision-support platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jonny Terrero", email = "dijinvestments3@gmail.com" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Data validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
    # Legacy Firebase dependencies kept for backwards compatibility with
    # older collector code paths that may still be present in the repo.
    "firebase-admin>=6.5.0",
    "google-cloud-firestore>=2.16.0",
    # HTTP clients
    "aiohttp>=3.10.0",
    "httpx>=0.27.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # LLM providers
    "openai>=1.45.0",
    "anthropic>=0.35.0",
    # Scraping
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "lxml>=5.0.0",
    # Config
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # Observability
    "structlog>=24.0.0",
    # Numeric
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    # Resilience
    "tenacity>=9.0.0",
    # WebSockets (crypto exchange streams)
    "websockets>=13.0.0",
    # Hashing
    "xxhash>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.5",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-pyyaml>=6.0.0",
    "types-beautifulsoup4>=4.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["packages", "apps", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N815", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["packages", "apps"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
env = ["DEMO_MODE=true", "DATABASE_URL=sqlite+aiosqlite:///./data/test_trading_intel.db"]

[tool.coverage.run]
source = ["packages", "apps"]
omit = ["tests/*", "*/demo/*", "*/fixtures/*"]
